# flaskws

./: README.md  pyproject.toml
src/: app.py  cli.py  settings.py  start.sh
src/lib/: auth.py  config.py  models.py  ws.py
src/templates/: index.html
src/tests/: test_ws.py
